fdo#51656 : Mean value line starts in wrong place in column graph

Change-Id: I2389687e54cec4c0e873bcc120cc21b3c3d11d78